--- a/test/fixtures/profiles.yml
+++ b/test/fixtures/profiles.yml
@@ -2,15 +2,19 @@
 #
 # Table name: profiles
 #
-#  id          :integer          not null, primary key
-#  name        :string(255)
-#  lastname    :string(255)
-#  address     :string(255)
-#  sex         :string(255)
-#  user_id     :integer
-#  district_id :integer
-#  created_at  :datetime         not null
-#  updated_at  :datetime         not null
+#  id                 :integer          not null, primary key
+#  name               :string(255)
+#  lastname           :string(255)
+#  address            :string(255)
+#  sex                :string(255)
+#  user_id            :integer
+#  district_id        :integer
+#  created_at         :datetime         not null
+#  updated_at         :datetime         not null
+#  photo_file_name    :string(255)
+#  photo_content_type :string(255)
+#  photo_file_size    :integer
+#  photo_updated_at   :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
